--- a/project.html
+++ b/project.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 	<meta charset="UTF-8">
-	<title>TITLE HERE</title>
+	<title>Welcome Page</title>
 	<link rel="stylesheet" href="main.css">
 	<meta name="description" content="DESCRIBE YOUR WEBSITE">
 	<meta name="keywords" content="KEY, WORDS, HERE">
