--- a/infoformdraft1.html
+++ b/infoformdraft1.html
@@ -28,7 +28,7 @@
             <input type = "text" name = "situation" value = " "> <br>
             Best way of contacting you(email/phone/in person)<br>
             <input type = "text" name = "contactinfo" value = " "> <br>
-            Preference of <a href = ".resources"individual </a> <i>*optional*</i> <br>
+            Preferences <i>*optional*</i>: <br>
             <input type = "text" name = "preference" value = " "> <br>
 			<input type = "submit" value = "submit">
 		</form>
