--- a/infoformdraft1.html
+++ b/infoformdraft1.html
@@ -8,31 +8,39 @@
 	<meta name="keywords" content="KEY, WORDS, HERE">
 	</head>
 	<body>
-		<center> <h1> Please fill out this form to your best ability:</h1>
+		<center> <h1> Please fill out this form to your best ability*:</h1>
 		<p > </p>
 		<ol> 
-			<form>
+			<form id="some_id" onSubmit="alert('Thank you! We look forward to getting in touch with you shortly!');" >
 			First name:<br>
 		    <input type="text" name = "firstname" value = " "> <br>
+		    Middle name:<br>
+		    <input type="text" name = "middlename" value = " "> <br>
 			Last name:<br>
 			<input type = "text" name = "lastname" value = " "> <br> <br>
-			City/town:<br>
+			City/town: <br>
 			<input type = "text" name = "location" value = " "> <br>
 			State:<br>
 			<input type = "text" name = "statelocation" value = " "> <br>
 			Country:<br>
 			<input type = "text" name = "country" value = " "> <br>
 			Year you moved to your location:<br>
-            <input type = "text" name = "year" value = " "> <br>
+            <input type = "text" name = "year" value = " "> <br><br>
+            Preferred language: <br>
+			<input type = "text" name = "language" value = " "> <br>
             Briefly describe your current situation: <br>
             <input type = "text" name = "situation" value = " "> <br>
             Best way of contacting you(email/phone/in person):<br>
             <input type = "text" name = "contactinfo" value = " "> <br>
-            Preferences <i>*optional*</i> : <br>
+            Do you know where in the process you are? <br>
+            <input type = "status" value = " "> <br>
+            Point of Contact preferences <i>~optional~</i> : <br>
             <input type = "text" name = "preference" value = " "> <br>
 			<input type = "submit" value = "submit">
 		</form>
 		<ol>
-			<img src = "https://upload.wikimedia.org/wikipedia/commons/thumb/2/2c/US_immigration_FE_2013-17.png/1200px-US_immigration_FE_2013-17.png" alt = "image" height="400" width="950"> </center>
+			<img src = "https://upload.wikimedia.org/wikipedia/commons/thumb/2/2c/US_immigration_FE_2013-17.png/1200px-US_immigration_FE_2013-17.png" alt = "image" height="400" width="950"> <br><br><br>
+			<small> *We take your privacy seriously and do not store IP addresses, all contact is made with your best interest in mind. <br> Please feel free to contact info@connectingthedots.com for any general questions.</small>
+		</center>
   	</body>
 </html>
