--- a/project.html
+++ b/project.html
@@ -1,20 +1,29 @@
 <!DOCTYPE html>
 <html>
 	<head>
-	<meta charset="UTF-8">
-	<title>Welcome Page</title>
-	<link rel="stylesheet" href="main.css">
-	<meta name="description" content="DESCRIBE YOUR WEBSITE">
-	<meta name="keywords" content="KEY, WORDS, HERE">
+		<style>
+			body{ 
+				background-color: orange;
+				width: 72%;
+    			margin: 0 auto;
+			}
+		</style>
+		<meta charset="UTF-8">
+		<title>Welcome Page</title>
+		<link rel="stylesheet" href="main.css">
+		<meta name="description" content="DESCRIBE YOUR WEBSITE">
+		<meta name="keywords" content="KEY, WORDS, HERE">
 	</head>
 	<body>
 		<div id = "home">
-			<h1><center>Welcome to Our Website</center></h1>
-			<p>Are you overwhelmed by all the documents you need to know to work in US and even to start your own business? Are you too shy to ask others for help? Do you feel frustrated since you have no idea what to. Don't worry! We are here to help you! There are a a lot of information available here for free. Please go check the details below!</p>
+			<h1><center> <img src = "https://upload.wikimedia.org/wikipedia/commons/8/80/Collection-national-flags.png" alt = "image" height="300" width="700"> <br> 
+				<big>FemmeHacks 2019 Entry: Connecting the Dots</big></center></h1>
+			<hr>
+			<p>Are you <i>overwhelmed</i> by <b>ALL</b> the documents you need to know to work in US and even to start your own business? Are you too shy to ask others for help? Do you feel frustrated since you have no idea what to do? Don't worry! We are here to help you! This is a free online platform designed to help connect people who need assistance regarding immigration with trained professionals and others who have gone through the tedious and complicated process. All in a safe space! We take your privacy and needs very seriously and will work with you and your loved ones at any stage in the process to help make this often scary process easier to handle!</p>
 		</div>
 
 		<div id = "about">
-			<h3>We have a lot of volunteers here to help you! You are welcome to check their information <button><a href = "./projectresourcepage1.html">here</a></button> .</h3>
+			<h3>We have a lot of volunteers here to help you! You are welcome to check their information <button> <a href = "./projectresourcepage1.html">here</a></button>.</h3>
 			<ul><li>Social Support (experienced users)</li>
 				<li>Lawyers</li>
 				<li>Providers</li>
@@ -30,8 +39,8 @@
 			</div>
 
 		<div id = "learn-more">
-			<h5> If you need languange support. We also have volunteer translators who can speak <button><a href = ".com/">Spanish</a>
-			</button> <button><a href = ".com/">Mandarin</a></button></button> <button><a href = ".com/">Japanese</a></button><button><a href = ".com/">and more.</a></button>
+			<h5> If you need languange support. We also have volunteer translators who can speak <br> <button><a href = ".com/">Spanish</a>
+			</button> <button><a href = ".com/">Mandarin</a></button></button> <button><a href = ".com/">Japanese</a></button><button><a href = ".com/">and more.</a></button> 
  </h5>
 		</div>
 
