--- a/projectresourcepage1.html
+++ b/projectresourcepage1.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		<style>
+body{ background-color: orange;
+}
+</style>
 	<meta charset="UTF-8">
 	<title>Resources</title>
 	<link rel = "stylesheet" href = "style.css">
@@ -8,13 +12,15 @@
 	<meta name="keywords" content="KEY, WORDS, HERE">
 	</head>
 	<body>
-		<center> <h1> Here is a list of available resources:</h1>
+		<center> <h1> Available Resources</h1>
 		<p > </p>
 		<ol> 
-		<a href=".John"> Jane Doe </a> Jane Doe is a PA certified lawyer with 8 years of experience in immigration law. <br>
-		<a href = ".Bob"> Bob Smith </a> Bob Smith has successfully been through the program for his grandmother. <br>
-		<a href = ".Mary"> Mary Smith </a> Mary Smith is in her last year of law school at Penn.  <br>
+		<a href=".John"> Jane Doe </a> Jane Doe is a PA certified lawyer with 8 years of experience in immigration law. JaneDoe@gmail.com <br><br>
+
+		<a href = ".Bob"> Bob Smith </a> Bob Smith has successfully been through the program for his grandmother. BobSmith1@gmail.com <br><br>
+		<a href = ".Mary"> Mary Smith </a> Mary Smith is in her last year of law school at Penn. MaryASmith@gmail.com <br><br>
 		<ol>
 			<img src = "https://res.cloudinary.com/jerrick/image/upload/f_auto,fl_progressive,q_auto,c_fit,w_1100/fcbkijro6egbyxyo1cma" alt = "image" height="400" width="600"> </center>
+	
   	</body>
 </html>
